--- a/seats.css
+++ b/seats.css
@@ -39,8 +39,25 @@ body {
 }
 
 .container {
-  perspective: 1000px;
-  margin-bottom: 3px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.screen {
+  width: 70%;
+  height: 50px;
+  margin-bottom: 30px;
+  background-color: #333;
+  border-radius: 10px;
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
 }
 
 .seat {
@@ -48,6 +65,7 @@ body {
   height: 22px;
   width: 18px;
   margin: 4px;
+  border: 2px solid grey;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
@@ -60,18 +78,13 @@ body {
   background-color: var(--available-color);
 }
 
-/* Selects the second row f*/
-.seat:nth-of-type(2) {
-  margin-right: 18px;
-}
-
-.seat:nth-last-of-type(2) {
-  margin-left: 18px;
+.seat.corridor {
+  background-color: #27262c;
+  border: none;
 }
 
 .seat:not(.occupied) {
   cursor: pointer;
-  transform: scale(1.2);
 }
 
 .showcase .seat:not(.occupied) {
