--- a/seats.css
+++ b/seats.css
@@ -119,9 +119,9 @@ body {
 
 .screen {
   background-color: #fff;
-  height: 90px;
+  height: 120px;
   width: 100%;
-  margin: 15px 0;
+  margin: 0;
   transform: rotateX(-45deg);
   box-shadow: 0 3px 10px rgba(255, 255, 255, 0.7);
 }
@@ -132,4 +132,20 @@ p.text {
 
 p.text span {
   color: #6feaf6;
+}
+.buy {
+  cursor: pointer;
+  height: 25px;
+  margin: 5px;
+  border-radius: 5px;
+  transition-duration: 0.6s;
+  background-color: #43e2f0;
+  color: white;
+  text-decoration: solid;
+  border: none;
+}
+
+.buy:hover {
+  background-color: white;
+  color: #43e2f0;
 }
