--- a/seats.css
+++ b/seats.css
@@ -42,11 +42,11 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 50px;
+  margin-top: 20px;
 }
 
 .screen {
-  width: 70%;
+  width: 70px;
   height: 50px;
   margin-bottom: 30px;
   background-color: #333;
