--- a/seats.css
+++ b/seats.css
@@ -149,3 +149,103 @@ p.text span {
   background-color: white;
   color: #43e2f0;
 }
+
+/* Modal styles */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed;
+  color: #27262c;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+}
+.modal {
+  display: none;
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 10% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 300px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+h2 {
+  margin-top: 0;
+}
+
+form {
+  margin-top: 20px;
+}
+
+label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+input[type='text'],
+input[type='email'] {
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+#close-modal {
+  height: 30px;
+  width: 60px;
+  background-color: #fff;
+  color: #43e2f0;
+  border: #43e2f0 solid;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+#close-modal:hover {
+  height: 30px;
+  width: 60px;
+  background-color: #43e2f0;
+  color: #fff;
+  /* border: #43e2f0 solid; */
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+#confirm-ticket {
+  height: 30px;
+  width: 60px;
+  background-color: #43e2f0;
+  color: #fff;
+  border: none;
+  /* border: #fff solid; */
+  border-radius: 10px;
+  cursor: pointer;
+}
+#confirm-ticket:hover {
+  height: 30px;
+  width: 60px;
+  background-color: #fff;
+  color: #43e2f0;
+  border: #43e2f0 solid;
+  /* border: #fff solid; */
+  border-radius: 10px;
+  cursor: pointer;
+}
